--- a/aldm/Cargo.toml
+++ b/aldm/Cargo.toml
@@ -14,6 +14,8 @@ edition.workspace = true
 
 [dependencies]
 
+dapp = { workspace = true }
+
 # Logging
 tracing = { workspace = true }
 tracing-appender = { workspace = true }
