--- a/dapp/Cargo.toml
+++ b/dapp/Cargo.toml
@@ -13,11 +13,12 @@ readme.workspace = true
 edition.workspace = true
 
 [features]
-default = [ "config", "log", "serde_yaml" ]
-path = [ "dep:permissions" ]
-log = [ "path", "dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber" ]
-config = [ "path" ]
-serde_yaml = [ "dep:serde", "dep:serde_yaml" ]
+default = ["config", "log", "serde", "yaml"]
+config = ["path"]
+log = ["path", "dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
+path = ["dep:permissions"]
+serde = ["dep:serde"]
+yaml = ["serde", "dep:serde_yaml"]
 
 [dependencies]
 
@@ -36,3 +37,4 @@ snafu = { workspace = true }
 # Data
 serde = { workspace = true, optional = true }
 serde_yaml = { workspace = true, optional = true }
+ambassador = "0.3.5"
