--- a/packaging/aldm/PKGBUILD
+++ b/packaging/aldm/PKGBUILD
@@ -1,13 +1,13 @@
 #! /usr/bin/env sh
 
-# Maintainer: shivanandvp <shivanandvp.oss@gmail.com, shivanandvp@rebornos.org>
+# Maintainer: shiva.patt <shiva.patt.oss@gmail.com, shivanandvp@rebornos.org>
 
 pkgver=0.0.1
 pkgrel=1
 pkgbase='aldm'
 pkgname=('aldm-cli' 'aldm-gui' 'aldm-db')
 arch=('x86_64')
-url="https://github.com/shivanandvp/aldm"
+url="https://github.com/shiva-patt-oss/aldm"
 makedepends=('git' 'cargo' 'gtk4' 'base-devel')
 source=("${url}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('SKIP')
