--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ resolver = "2"
 
 version = "0.0.1"
 description = "A driver manager for Arch Linux"
-repository = "https://github.com/shivanandvp/aldm.git"
-homepage = "https://github.com/shivanandvp/aldm"
-authors = ["shivanandvp <shivanandvp.oss@gmail.com>"]
+repository = "https://github.com/shiva-patt-oss/aldm.git"
+homepage = "https://github.com/shiva-patt-oss/aldm"
+authors = ["shiva.patt <shiva.patt.oss@gmail.com>"]
 keywords = ["driver", "drivers", "hardware", "arch"]
 exclude = ["packaging/*", ".github/*", "*.code-workspace"]
 categories = []
@@ -43,7 +43,6 @@ snafu = "0.7"
 lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde-aux = "4.2"
-serde_yaml = "0.9"
 tracing-serde = "0.1"
 speedy = "0.8"
 log = "0.4"
